# aoc2022.hs

./: LICENSE  README.md  aoc2022.cabal  default.nix  shell.nix
src/1/: Main.hs  main.hs
src/2/: Main.hs
