cabal-version:  3.4
name:           aoc2022
version:        0.1
synopsis:       Solutions to a few problems from projecteuler.net, written in Haskell
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    LICENSE

executable 1
  main-is: src/1/Main.hs
  ghc-options: -Wall -Widentities -Wincomplete-uni-patterns -Wincomplete-record-updates -Wno-unused-top-binds -Wno-orphans
  build-depends:
    base
  default-language: Haskell2010
